# fastsimplex

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
assets/: benchmark_results_cuda.txt
scripts/: benchmark.py
src/fastsimplex/: __init__.py  __init__.pyi  _simplex.cu  _simplex.metal  _simplex.mm  _simplex_dispatch.cpp  _simplex_metal.mm  simplex.py
tests/: test_simplex.py
