[project]
name = "fastsimplex"
version = "0.1.0"
description = "Metal-accelerated Simplex noise generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.2",
    "setuptools>=75.8.0",
    "torch>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastsimplex"]

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.10.0",
    "noise>=1.2.2",
    "pytest>=8.3.4",
]
